fixed footer on mobile

--- a/pages/css/stylesPages.scss
+++ b/pages/css/stylesPages.scss
@@ -227,9 +227,10 @@ footer{
 
     .info__wrapper{
         width: 100%;
-        height: 70vh;
+        height: auto;
         color: var(--white);
         margin-right: 30px;
+        margin-bottom: 50px;
         font-size: 1.1rem;
         overflow-y: scroll;
 
@@ -401,7 +402,6 @@ body{
 .socials{
     display: flex;
     flex-direction: column;
-    position: fixed;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -421,8 +421,27 @@ body{
     }
 }
 
+.footer-mobile{
+    margin-top: auto;
+    color: white;
+    height: 0;
+    width: 100%;
+    padding: 30px ;
+    font-size: 0.7rem;
+}
+
 
 @media (max-width: 1023px) {
+
+    footer{
+        display: none;
+    }
+
+    .footer-mobile{
+        display: flex;
+        height: auto;
+    }
+
     #custom-cursor{
         display: none;
     }
@@ -435,6 +454,8 @@ body{
         width: 100dvw;
         height: 100dvh;
         overflow-y: scroll;
+        display: flex;
+        flex-direction: column;
     }
 
     header{
